# airport-platform_test

./: .gitignore  README.md  analyze-model  config.sample.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  sample_payload.json
analysis/: cli.py  sensitivity_inputs.py
analyze_model/: __init__.py  analysis.py  batch.py  cli.py  config.py  logging_utils.py  report.py  web_app.py
assets/: README.md
configs/: default.yaml
engine/: results.py  sensitivity_runner.py  strategies.py
excel_analyzer/: __init__.py  analyzer.py  dependency.py  financial_rules.py  models.py  parser.py
openpyxl/: __init__.py  comments.py
openpyxl/cell/: cell.py
openpyxl/styles/: __init__.py  colors.py  fills.py
openpyxl/workbook/: __init__.py  workbook.py
report_generator/: __init__.py  cli.py  config.py  data_models.py  references.py  renderer.py  summarizer.py  templating.py
reporting/: __init__.py  nlg_templates.py  sensitivity_summary.py  template_engine.py
src/excel_reporter/: __init__.py  __main__.py  cli.py
templates/: report.md.j2  summary_template.txt
tests/: test_reporting_templates.py  test_sensitivity_inputs.py
